fix: resolve background color issue for non-selected tab in `Settings` visible in OLED theme
- Addressed background color inconsistency for non-selected tab in "Settings" menu when viewed in OLED theme, caused by global styling overriding the specific tab style

Changes summary:
    - Corrected background color inconsistency for non-selected tab in "Settings" menu visible in OLED theme, ensuring it retains the appropriate background color despite global styling.

--- a/src/sass/elements/_btn.scss
+++ b/src/sass/elements/_btn.scss
@@ -61,6 +61,7 @@ main [role='presentation'] button.absolute.rounded-full {
 /* === Settings > Tabs === */
 [role='tablist'] button {
 	padding: var(--p-btn) !important;
+	background-color: transparent !important;
 
 	&[data-state='active'],
 	&:hover {
